--- a/css/style.scss
+++ b/css/style.scss
@@ -30,6 +30,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Quicksand', sans-serif;
+    overflow-x: hidden;
 }
 header .background {
     display: flex;
@@ -139,6 +140,7 @@ nav {
     flex-direction: column;
     min-height: 100vh;
     text-align: center;
+   
     h1 {
         font-size: 1.5rem;
         margin: 0;
@@ -151,6 +153,10 @@ nav {
     }
     .about-me-content {
         width: calc(50%);
+        padding: 2rem 0;
+        @include mediaQuery780px(){
+            width: 100%;
+        }
         h1{
             color: $colorOffBlack;
         }
@@ -164,6 +170,9 @@ nav {
         border: .5px solid $colorLightGray;
         box-shadow: 5px 5px 0 2px rgba($color: black, $alpha: 0.3);
         width: 50%;
+        @include mediaQuery780px(){
+            width: 100%;
+        }
         h1{
             padding: 1rem 0;
         }
@@ -172,6 +181,7 @@ nav {
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(2, 1fr);
             place-content: center;
+            padding: 2rem 0;
             p{
                 font-size: 0.8rem;
             }
@@ -205,13 +215,21 @@ nav {
             @include mediaQuery950px(){
                 grid-template-columns: repeat(2, 1fr);
             }
-            
+            @include mediaQuery680px(){
+                grid-template-columns: 1fr;
+                align-items: center;
+                justify-items: center;
+            }
             .project-column{
                 box-shadow: 5px 5px 2px 2px rgba($color: #000000, $alpha: 0.3);
                 border: .5px solid $colorLightGray;
                 transition: 0.2s ease;
                 z-index: 1;
                 object-fit: contain;
+                @include mediaQuery680px(){
+                    width: 50%;
+                    
+                }
                 &:hover{
                     transform: scale(1.05);
                 }
@@ -230,7 +248,7 @@ nav {
                     img{
                         width: 100%;
                         height: 220px;
-                        border-bottom: 2px solid $colorOffBlack;
+                        border-bottom: 0.5px solid $colorLightGray;
                     }
                 }
                 .description{
@@ -265,13 +283,16 @@ align-items: center;
         }
         @include mediaQuery680px(){
             grid-template-columns: 1fr;
+            justify-items: center;
         }
         .landing-page-column{
             border: .5px solid $colorLightGray;
             box-shadow: 5px 5px 0 2px rgba($color: #000000, $alpha: 0.3);
             z-index: 1;
             transition: 0.2s ease;
-            
+            @include mediaQuery680px(){
+                width: 70%;
+            }
             &:hover{
                 transform: scale(1.05);
             }
@@ -289,7 +310,7 @@ align-items: center;
             img{
                 width: 100%;
                 height: 220px;
-                border-bottom: 2px solid $backgroundLightGray;
+                border-bottom: 0.5px solid $backgroundLightGray;
             }
             a{
                 text-decoration: none;
@@ -337,6 +358,11 @@ align-items: center;
                 font-size: 1.5rem;
                 cursor: pointer;
                 color: $backgroundLightGray;
+                transition: 0.2s ease;
+                &:hover{
+                    background: $colorBlue;
+
+                }
             }
         }
     }
@@ -363,6 +389,7 @@ align-items: center;
         }
         @include mediaQuery680px(){
             grid-template-columns: 1fr;
+            justify-items: center;
         }
         .mini-inner-content{
             border: .5px solid $colorLightGray;
@@ -370,6 +397,9 @@ align-items: center;
             z-index: 1;
             transition: 0.2s ease;
             object-fit: contain;
+            @include mediaQuery680px(){
+                width: 70%;
+            }
             &:hover{
                 transform: scale(1.05);
             }
@@ -432,9 +462,13 @@ align-items: center;
                     border: none;
                     background: $colorOrange;
                     color: $backgroundLightGray;
+                    transition: 0.2s ease;
+                    &:hover{
+                        background: $colorBlue;
+                    }
                 }
                 input, textarea{
-                    padding: 0.5rem 2rem;
+                    padding: 0.8rem 2rem;
                     width: 50%;
                     outline: none;
                     border: 1px solid $colorLightGray;
@@ -451,6 +485,14 @@ align-items: center;
         }
     }
 }
+.back-to-top{
+    text-align: center;
+    a{
+        text-decoration: none;
+        color: $colorBlue;
+        font-size: 1.2rem;
+    }
+}
 /* Footer */
 .footer {
     min-height: 20vh;
@@ -464,8 +506,11 @@ align-items: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 2rem;
         text-align: center;
+       @include mediaQuery680px(){
+        flex-direction: column;
+        padding: 2rem 0;
+       }
         .footer-col{
             width: 48%;
             a{
