--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header .background {
 
 .background::before {
   content: "";
-  background-image: url(/image/pexels-pixabay-210243.jpg);
+  background-image: url(/image/pexels-pixabay-417173.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -62,6 +62,7 @@ nav .my-logo {
   text-decoration: none;
   padding: 0.3rem 1rem;
   border: 2px solid #e8630a;
+  font-size: 1.5rem;
 }
 nav ul {
   display: -webkit-box;
@@ -168,6 +169,19 @@ nav ul li a:hover {
     width: 100%;
   }
 }
+.about-me-container .about-me-content .read-btn {
+  padding: 0.3rem 0.8rem;
+  background: #e8630a;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #fafafa;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+.about-me-container .about-me-content .read-btn:hover {
+  background: #2b4353;
+}
 .about-me-container .about-me-content h1 {
   color: #222831;
 }
@@ -203,6 +217,50 @@ nav ul li a:hover {
 }
 .about-me-container .skills-content .skills-inner-content .skills img {
   width: 20%;
+}
+
+/* Modal Section */
+.modal-container {
+  width: 450px;
+  height: 500px;
+  background: #222831;
+  border-radius: 2px;
+  margin: 0 auto;
+  position: fixed;
+  top: -200%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 98;
+  opacity: 0;
+  -webkit-transition: 0.8s ease-in-out;
+  transition: 0.8s ease-in-out;
+}
+.modal-container .modal-close-btn {
+  position: absolute;
+  right: 2rem;
+  top: 1rem;
+}
+.modal-container .modal-close-btn .modal-btn {
+  cursor: pointer;
+  background: transparent;
+  font-size: 2rem;
+  border: none;
+  color: #fafafa;
+}
+.modal-container .modal-content {
+  color: #fafafa;
+  width: 90%;
+  margin-inline: auto;
+  padding: 4rem 0;
+}
+.modal-container .modal-content h1 {
+  color: #e8630a;
+}
+
+.modal-container.open {
+  opacity: 1;
+  top: 4rem;
 }
 
 /* HTML Email Project Section */
