--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ nav ul li a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 3rem;
+  padding: 3rem 0;
 }
 
 .about-me-container {
@@ -163,7 +163,7 @@ nav ul li a:hover {
 }
 .about-me-container .about-me-content {
   width: 50%;
-  padding: 2rem 0;
+  padding: 3rem 0 2rem 0;
 }
 @media (max-width: 780px) {
   .about-me-container .about-me-content {
@@ -274,84 +274,6 @@ nav ul li a:hover {
   top: 4rem;
 }
 
-/* HTML Email Project Section */
-.section-3 {
-  min-height: 80vh;
-  padding: 2.5rem 0;
-  letter-spacing: 0.1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.section-3 .project-container h1 {
-  color: #222831;
-  text-align: center;
-}
-.section-3 .project-container .project-content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.2rem;
-  place-content: center;
-}
-@media (max-width: 950px) {
-  .section-3 .project-container .project-content {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 680px) {
-  .section-3 .project-container .project-content {
-    grid-template-columns: 1fr;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    justify-items: center;
-  }
-}
-.section-3 .project-container .project-content .project-column {
-  -webkit-box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.3);
-          box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.3);
-  border: 0.5px solid #b8b6b3;
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
-  z-index: 1;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-@media (max-width: 680px) {
-  .section-3 .project-container .project-content .project-column {
-    width: 70%;
-  }
-}
-.section-3 .project-container .project-content .project-column:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
-.section-3 .project-container .project-content .project-column .bold-text {
-  font-weight: bold;
-}
-.section-3 .project-container .project-content .project-column p {
-  margin: 0;
-  padding: 0.2rem;
-}
-.section-3 .project-container .project-content .project-column a {
-  text-decoration: none;
-  color: black;
-}
-.section-3 .project-container .project-content .project-column .card img {
-  width: 100%;
-  height: 220px;
-  border-bottom: 0.5px solid #b8b6b3;
-}
-.section-3 .project-container .project-content .project-column .description {
-  padding: 0.8rem 0.3rem;
-}
-
 /* Landing Page Project */
 .section-4 {
   min-height: 100vh;
@@ -419,7 +341,7 @@ nav ul li a:hover {
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column img {
   width: 100%;
-  height: 220px;
+  max-height: 550px;
   border-bottom: 0.5px solid #fafafa;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column a {
@@ -563,7 +485,7 @@ nav ul li a:hover {
 }
 .section-6 .mini-project-content .mini-inner-content .img-div img {
   width: 100%;
-  height: 220px;
+  max-height: 550px;
 }
 
 /* Section 6, Contact Form */
@@ -640,8 +562,10 @@ nav ul li a:hover {
   text-align: center;
 }
 
+/* Back to Top */
 .back-to-top {
   text-align: center;
+  background: #fafafa;
 }
 .back-to-top a {
   text-decoration: none;
