--- a/css/style.scss
+++ b/css/style.scss
@@ -119,6 +119,10 @@ nav {
             color: $backgroundLightGray;
             font-size: 1.3rem;
             padding-right: .3rem;
+            transition: 0.2s ease-in;
+            &:hover{
+                color: $colorOrange;
+            }
         }
     }
     
@@ -159,15 +163,33 @@ nav {
             width: 100%;
         }
         .read-btn{
-            padding: 0.4rem .8rem;
+            padding: 0.5rem 1rem;
             background: $colorOrange;
             border: none;
             cursor: pointer;
             font-size: 1rem;
             color: $backgroundLightGray;
             transition: 0.2s ease;
-            &:hover{
+            position: relative;
+            z-index: 1;
+            &::after{
+                content: '';
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                z-index: -1;
+                top: 0;
+                left: 0;
                 background: $colorBlue;
+                transition: 0.25s ease-in;
+                transform: scaleX(0);
+                transform-origin: left;
+            }
+            &:hover{
+                &::after{
+                    transform-origin: left;
+                    transform: scaleX(1);
+                }
             }
         }
         h1{
@@ -177,6 +199,19 @@ nav {
             width: 15%;
             clip-path: circle();
             margin-bottom: 0;
+            position: relative;
+            z-index: 3;
+            &::after{
+                content: '';
+                position: absolute;
+                z-index: -1;
+                top: 20%;
+                left: 0;
+                
+                width: 100%;
+                height: 100%;
+                background: $colorBlue;
+            }
         }
     }
     .skills-content {
@@ -300,6 +335,10 @@ align-items: center;
                 .bold-text{
                     font-weight: bold;
                 }
+                small{
+                    padding: 0.2rem;
+                    font-style: italic;
+                }
             }
             img{
                 width: 100%;
@@ -352,12 +391,30 @@ align-items: center;
                 font-size: 1.5rem;
                 cursor: pointer;
                 color: $backgroundLightGray;
-                transition: 0.2s ease;
-                &:hover{
-                    background: $colorBlue;
-
+                position: relative;
+                z-index: 1;
+                
+                &::after{
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: $colorOffBlack;
+                    top: 0;
+                    left: 0;
+                    z-index: -1;
+                    transform: scaleX(0);
+                    transform-origin: left;
+                    transition: 0.25s ease-in;
+            }    
+            &:hover{
+                &::after{
+                    transform: scaleX(1);
+                    transform-origin: left;
                 }
+    }
             }
+            
         }
     }
 
@@ -405,6 +462,10 @@ align-items: center;
                 }
                 .bold-text{
                     font-weight: bold;
+                }
+                small{
+                    padding: 0.2rem;
+                    font-style: italic;
                 }
             }
            
