--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 html {
   scroll-behavior: smooth;
 }
+html::-webkit-scrollbar {
+  width: 1rem;
+}
+html::-webkit-scrollbar-thumb {
+  background: #e8630a;
+}
+html::-webkit-scrollbar-track {
+  background: #b8b6b3;
+}
 
 body {
   padding: 0;
@@ -30,10 +39,7 @@ header .background {
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
   -webkit-filter: brightness(45%);
           filter: brightness(45%);
   background-attachment: fixed;
@@ -264,7 +270,9 @@ nav ul li a:hover {
   height: 500px;
   background: #222831;
   border-radius: 2px;
-  margin: 0 auto;
+  -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
+  margin: auto auto;
   position: fixed;
   top: -200%;
   left: 0;
@@ -301,7 +309,8 @@ nav ul li a:hover {
   color: #fafafa;
   width: 90%;
   margin-inline: auto;
-  padding: 4rem 0;
+  padding: 2rem 0;
+  letter-spacing: 0.05rem;
 }
 .modal-container .modal-content h1 {
   color: #e8630a;
